# readfish-tools

./: Cargo.toml  README.md  config.toml  pyproject.toml
.github/pre-flight/: pre-flight.yml
.github/workflows/: CI.yml  pre-flight.yml  safety.yml  scheduled.yml  test.yml
resources/: AMD_loci_and_sort_challenging.bed  CancerPanelTargets.txt  RAPID_CNS2.toml  clockface.toml  human_barcode.toml  invalid_file.paf  panel_adaptive_nogenenames_20122021_hg38.bed  sequencing_summary_0.txt  test_hum_4000.paf  test_human.bam  test_paf_barcode05_NA12878.chr.paf  test_paf_barcode05_NA12878.paf  test_paf_with_seq_sum.paf  tst_170_coords_extended.csv  tst_fusion_coords_extended.csv
src/: channels.rs  lib.rs  nanopore.rs  paf.rs  readfish.rs  readfish_io.rs  sequencing_summary.rs
tests/: integration_tests.rs  python_test.py
