[package]
name = "readfish-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "readfish_tools"

[dependencies]
csv = "1.2.2"
lazy_static = "1.4.0"
maplit = "1.0.2"
ndarray = "0.15.6"
pyo3 = { version = "0.17.1", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.6"
