[package]
name = "readfish-tools"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/adoni5/readfish-tools/"
keywords = ["genomics", "analysis", "nanopore", "adaptive_sampling"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "readfish_tools"

[dependencies]
csv = "1.2.2"
flate2 = { version = "1.0.26", features = ["zlib-ng-compat"] }
gzp = { version = "0.11.3", features = ["deflate_zlib_ng", "libdeflate"] }
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"
maplit = "1.0.2"
ndarray = "0.15.6"
pyo3 = { version = "0.17.1", features = ["extension-module"] }
rayon = "1.7.0"
regex = "1.9.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.6"
